--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
 
+
 spring.datasource.url:jdbc:mysql://localhost/mobileCloud
 spring.datasource.username:root
-spring.datasource.password:satya@27
+spring.datasource.password:niveda
+
 spring.datasource.driver:com.mysql.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect:org.hibernate.dialect.MySQL5Dialect
